<resources>
    <string name="app_name">GeoRealm</string>
    <string name="title_activity_maps">GeoRealm</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_create_character">CreateCharacterActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_highscore">HighscoreActivity</string>
    <string name="title_activity_battle">BattleActivity</string>
    <string name="title_activity_choose_character">ChooseCharacter</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="title_activity_character">CharacterActivity</string>
    <string name="title_activity_interact">InteractActivity</string>

    <string name="quit">quit</string>
    <string name="login_fierce_warrior">login, fierce warrior</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="logout">logout</string>
    <string name="password">password</string>
    <string name="password_optional">password, optional</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="no_account">don\'t have an account?</string>
    <string name="click_here">click here</string>
    <string name="choose_character">choose your character</string>
    <string name="no_character_info">you do not have any created characters\nclick the + button to create one</string>
    <string name="swordsman">swordsman</string>
    <string name="sorcerer">sorcerer</string>
    <string name="rogue">rogue</string>
    <string name="back">back</string>
    <string name="play">play</string>
    <string name="menu">menu</string>
    <string name="change_character">change character</string>
    <string name="character">character</string>
    <string name="user">user</string>
    <string name="account">account</string>
    <string name="skills">skills</string>
    <string name="inventory">inventory</string>
    <string name="create">create</string>
    <string name="character_name">name</string>
    <string name="enter_character_name">character name</string>
    <string name="character_class">class</string>
    <string name="character_subclass">subclass</string>
    <string name="character_level">level</string>
    <string name="swordsman_class_desc">swordsmen are melee fighters highly trained in the arts of
        weaponry. they are strong and quick on the battlefield,
        usually leading the charge.</string>
    <string name="sorcerer_class_desc">students gifted with a keen intellect and unwavering
        discipline may walk the path of the sorcerer. sorcerers demolish their
        foes with arcane incantations.</string>
    <string name="rogue_class_desc">for rogues, the only code is the contract, and their honor
        is purchased in gold. rogues often initiate combat with a surprise attack
        from the shadows.</string>
    <string name="berserker">berserker</string>
    <string name="berserker_desc">moderate damage, dual wielding\nmoderate armor</string>
    <string name="paladin">paladin</string>
    <string name="paladin_desc">low damage\nheavy armor\nhealing, moderate crowd control</string>
    <string name="icebound">icebound</string>
    <string name="icebound_desc">moderate damage\nmoderate armor\nheavy crowd control</string>
    <string name="pyromancer">pyromancer</string>
    <string name="pyromancer_desc">heavy damage, damage over time\nlow armor</string>
    <string name="shadow">shadow</string>
    <string name="shadow_desc">moderate damage, damage over time\nlow armor\ninvisibility</string>
    <string name="assassin">assassin</string>
    <string name="assassin_desc">heavy damage\nlow armor\nexecution</string>
    <string name="level">level</string>
    <string name="level_x">level %1$d,</string>
    <string name="leveling_points">leveling points</string>
    <string name="experience">, experience</string>
    <string name="gems_collected">gems collected</string>
    <string name="gems_spent">gems spent</string>
    <string name="monsters_slain">monsters slain</string>
    <string name="duels_won">duels won</string>
    <string name="attack">attack damage</string>
    <string name="defence">defence</string>
    <string name="magic">magic damage</string>
    <string name="magic_resistance">magic resistance</string>
    <string name="score">score</string>
    <string name="info">info</string>
    <string name="characters">characters</string>
    <string name="friends">friends</string>
    <string name="best_character">best character</string>
    <string name="best_character_score">best character score</string>
    <string name="view_character">view character</string>
    <string name="delete_character">delete character</string>
    <string name="view_friend">view friend</string>
    <string name="remove_friend">remove friend</string>
    <string name="view_account">view account</string>
    <string name="challenge_to_duel">challenge to duel</string>
    <string name="last_seen">last seen</string>
    <string name="learn_skill">learn skill (30 gems)</string>
    <string name="skill_sample">skill sample</string>
    <string name="description_sample">description sample description sample description \nsample description sample</string>
    <string name="stats_sample">stats sample\nstats sample</string>
    <string name="level_1">level 1</string>
    <string name="level_3">level 3</string>
    <string name="level_5">level 5</string>
    <string name="accounts">accounts</string>
    <string name="highscore">highscore</string>
    <string name="instructions">instructions</string>
    <string name="my_account">my account</string>
    <string name="leave_battle">leave battle (25 gems)</string>
    <string name="leave_duel">leave duel</string>
    <string name="vs">VS</string>
    <string name="health">health</string>
    <string name="mana">mana</string>
    <string name="stamina">stamina</string>
    <string name="items">items</string>
    <string name="history">history</string>
    <string name="name_level">%1$s, %2$d</string>
    <string name="marker_gem_title">gem</string>
    <string name="marker_gem_info">hold to collect</string>
    <string name="marker_gem_xp">+5 xp</string>
    <string name="marker_shop_title">shop</string>
    <string name="marker_shop_info">click to enter</string>
    <string name="marker_character_info">click for info</string>
    <string name="stats">stats</string>
    <string name="achievements">achievements</string>
    <string name="info_experience">%1$d/%2$d</string>
    <string name="info_duels">%1$d/%2$d</string>
    <string name="level_needed">level %1$d+ needed</string>
    <string name="learned">learned</string>
    <string name="available">available</string>
    <string name="unavailable">unavailable</string>
    <string name="equip">equip</string>
    <string name="integer">%1$d</string>
    <string name="brackets_integer">(%1$d)</string>
    <string name="buy">buy</string>
    <string name="sell">sell</string>
    <string name="buy_cost">buy (%1$d gems)</string>
    <string name="sell_cost">sell (%1$d gems)</string>
    <string name="health_potion">health potion</string>
    <string name="health_potion_desc">restores 50 + 5 per level health points</string>
    <string name="mana_potion">mana potion</string>
    <string name="mana_potion_desc">restores 35 + 7 per level mana points</string>
    <string name="stamina_potion">stamina potion</string>
    <string name="stamina_potion_desc">restores 35 + 7 per level stamina points</string>
    <string name="add_friend">add friend</string>
    <string name="duel">duel</string>
    <string name="make_friend_request">make friend request</string>
    <string name="cancel_friend_request">cancel friend request</string>
    <string name="accept_friend_request">accept friend request</string>
    <string name="cancel_accept_friend_request">cancel accept</string>
    <string name="waiting_for_response">waiting for other player\'s response&#8230;</string>
    <string name="or">or</string>
    <string name="make_duel_request">challenge to a duel</string>
    <string name="cancel_duel_request">cancel challenge</string>
    <string name="accept_duel_request">accept challenge</string>
    <string name="cancel_accept_duel_request">cancel accept</string>
    <string name="position">%1$d.</string>
</resources>
