<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:id="@+id/layout_item"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_gem"
        android:tint="@color/colorHealth"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_name"
        android:text="@string/health_potion"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        android:textColor="@color/colorHealth"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintLeft_toRightOf="@+id/item_icon"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_count"
        android:text="@string/brackets_integer"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        android:textColor="@color/colorHealth"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintLeft_toRightOf="@+id/item_name"
        android:layout_marginStart="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_desc"
        android:text="@string/health_potion_desc"
        android:textSize="14sp"
        android:textStyle="italic"
        android:textColor="@color/colorHealth"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintLeft_toRightOf="@+id/item_icon"
        android:layout_marginStart="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
