<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/colorSword"
    app:cardCornerRadius="15dp"
    android:layout_marginTop="7dp"
    android:layout_marginLeft="7dp"
    android:layout_marginRight="7dp"
    android:layout_marginBottom="18dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_skill_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/choose_character_swordsman_card"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/skill_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="10dp"
            android:text="@string/skill_sample"
            android:textColor="@color/colorSword"
            android:textSize="22sp"
            android:textStyle="bold|italic"
            android:paddingBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/skill_status"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layout_skill_description"
            android:text="@string/level_needed"
            android:textColor="@color/colorSword"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:layout_marginEnd="10dp"/>

        <RelativeLayout
            android:id="@+id/layout_skill_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skill_name"
            android:background="@drawable/swordsman_skill_gradient"
            android:visibility="visible">

            <TextView
                android:id="@+id/skill_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="7dp"
                android:text="@string/description_sample"
                android:textColor="@color/colorSword"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_centerHorizontal="true"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/skill_stats"
                android:layout_below="@+id/skill_description"
                android:text="@string/stats_sample"
                android:textColor="@color/colorSword"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_centerHorizontal="true"
                android:gravity="center"/>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
