<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/colorDagger"
    app:cardCornerRadius="15dp"
    android:layout_margin="7dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/choose_character_rogue_card">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/dagger"
            android:tint="@color/colorDagger"
            android:rotation="-20"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_more_rogue_class"/>

        <TextView
            android:id="@+id/class_card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/rogue"
            android:textColor="@color/colorDagger"
            android:textSize="22sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/class_card_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/class_card_name"
            app:layout_constraintRight_toRightOf="@+id/guideline"
            android:layout_marginStart="10dp"
            android:text="@string/rogue_class_desc"
            android:textColor="@color/colorDagger"
            android:textSize="14sp"
            android:textStyle="italic"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_more_rogue_class"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/class_card_info"
            android:src="@drawable/ic_arrow_down"
            android:background="@android:color/transparent"
            android:tint="@color/colorDagger"
            android:layout_marginEnd="5dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rogue_subclass_layout"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_more_rogue_class"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/select_assassin"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/rogue_gradient_1">

                <TextView
                    android:id="@+id/assassin_class"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/assassin"
                    android:textColor="@color/colorDagger"
                    android:textSize="22sp"
                    android:textStyle="bold|italic"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/assassin_class"
                    android:text="@string/assassin_desc"
                    android:textColor="@color/colorDagger"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:layout_marginBottom="10dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/select_shadow"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/rogue_gradient_2"
                android:layout_marginTop="-1dp">

                <TextView
                    android:id="@+id/shadow_class"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/shadow"
                    android:textColor="@color/colorBase"
                    android:textSize="22sp"
                    android:textStyle="bold|italic"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/shadow_class"
                    android:text="@string/shadow_desc"
                    android:textColor="@color/colorBase"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
